[gd_scene load_steps=14 format=3 uid="uid://d5a0xw5f6p3r"]

[ext_resource type="Script" path="res://scripts/miniMap.gd" id="1_wskbp"]
[ext_resource type="Texture2D" uid="uid://8vcjxbiyb5sp" path="res://assets/UI/minimap/bg_sea.png" id="2_4yhr1"]
[ext_resource type="Texture2D" uid="uid://xbjqeuib142y" path="res://assets/UI/minimap/map 2.png" id="3_1rc1n"]
[ext_resource type="Texture2D" uid="uid://bjs1imqod2wqv" path="res://assets/UI/frame0000.png" id="3_nbh30"]
[ext_resource type="Texture2D" uid="uid://dghrmm7bn7mgr" path="res://assets/UI/minimap/map 1.png" id="4_fof6x"]
[ext_resource type="Texture2D" uid="uid://dqarestysg2n0" path="res://assets/UI/frame0001.png" id="4_pmrqh"]
[ext_resource type="Texture2D" uid="uid://y7bjle8rml2k" path="res://assets/UI/frame0002.png" id="5_gahko"]
[ext_resource type="Texture2D" uid="uid://bvjtl3klswsp5" path="res://assets/UI/minimap/map4.png" id="6_xddwh"]

[sub_resource type="Animation" id="Animation_1prq8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Transform2D(1, 0, 0, 1, 0, 0)]
}

[sub_resource type="Animation" id="Animation_bnvbo"]
resource_name = "activate"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:transform")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.378929, 2.92816),
"update": 0,
"values": [Transform2D(1, 0, 0, 0, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_kw5t6"]
_data = {
"RESET": SubResource("Animation_1prq8"),
"activate": SubResource("Animation_bnvbo")
}

[sub_resource type="AnimatedTexture" id="AnimatedTexture_m2m6q"]
frames = 3
frame_0/texture = ExtResource("3_nbh30")
frame_0/duration = 0.3
frame_1/texture = ExtResource("4_pmrqh")
frame_1/duration = 0.3
frame_2/texture = ExtResource("5_gahko")
frame_2/duration = 0.3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kcdc8"]
bg_color = Color(0.941176, 0.94902, 0.956863, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="miniMap" type="CanvasLayer"]
script = ExtResource("1_wskbp")

[node name="Ani" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_kw5t6")
}

[node name="bg" type="Sprite2D" parent="."]
position = Vector2(973, 594)
scale = Vector2(1.178, 0.9)
texture = ExtResource("2_4yhr1")

[node name="dis" type="Line2D" parent="."]
points = PackedVector2Array(98, 35, 390, 195)
width = 48.295
texture = SubResource("AnimatedTexture_m2m6q")
texture_mode = 1
begin_cap_mode = 1
antialiased = true

[node name="map4" type="Sprite2D" parent="."]
position = Vector2(635, 358)
rotation = 0.71733
scale = Vector2(0.779022, 0.780488)
texture = ExtResource("6_xddwh")

[node name="hit" type="Area2D" parent="map4"]

[node name="body" type="CollisionPolygon2D" parent="map4/hit"]
polygon = PackedVector2Array(-158.291, 66.4162, -122.767, 132.399, -31.6526, 170.382, 66.3966, 93.5102, 141.395, 7.80502, 205.319, -102.264, 147.321, -158.879, -11.1152, -156.947, -123.922, -143.737, -208.675, 4.87044, -207.089, 74.9008)

[node name="map3" type="Sprite2D" parent="."]
position = Vector2(1339, 431)
scale = Vector2(0.601695, 0.649083)
texture = ExtResource("6_xddwh")

[node name="hit" type="Area2D" parent="map3"]
position = Vector2(-7, 22)
collision_layer = 128
collision_mask = 128

[node name="body" type="CollisionPolygon2D" parent="map3/hit"]
position = Vector2(-270, -188)
polygon = PackedVector2Array(311.901, 16.5583, 130.746, 105.915, 67.5914, 243.032, 187.253, 301.576, 283.648, 273.845, 478.098, 266.141, 488.071, 122.862, 464.803, 2.69257)

[node name="map2" type="Sprite2D" parent="."]
position = Vector2(1248, 815)
texture = ExtResource("3_1rc1n")

[node name="hit" type="Area2D" parent="map2"]
position = Vector2(-7, 22)
collision_layer = 128
collision_mask = 128

[node name="body" type="CollisionPolygon2D" parent="map2/hit"]
position = Vector2(-278, -192)
polygon = PackedVector2Array(274, 96, 219, 130, 203, 185, 250, 252, 311, 252, 342, 231, 405, 168, 360, 89)

[node name="map1" type="Sprite2D" parent="."]
position = Vector2(734, 716)
scale = Vector2(0.743682, 0.766816)
texture = ExtResource("4_fof6x")

[node name="hit" type="Area2D" parent="map1"]
position = Vector2(27, 26)
collision_layer = 128
collision_mask = 128

[node name="body" type="CollisionPolygon2D" parent="map1/hit"]
position = Vector2(-288, -195)
polygon = PackedVector2Array(105.019, 0.771912, 56.6117, 131.181, 57.9564, 218.556, 173.597, 285.064, 304.029, 316.363, 454, 189, 406.223, 67.2807, 227.384, 17.7252)

[node name="to" type="ProgressBar" parent="."]
offset_left = 1537.0
offset_top = 290.0
offset_right = 1803.0
offset_bottom = 300.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kcdc8")
max_value = 1000.0
value = 600.0
show_percentage = false

[node name="from" type="ProgressBar" parent="."]
offset_left = 1537.0
offset_top = 290.0
offset_right = 1803.0
offset_bottom = 300.0
theme_override_styles/fill = SubResource("StyleBoxFlat_kcdc8")
max_value = 1000.0
value = 500.0
show_percentage = false

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_right = 0.097
anchor_bottom = 0.186
offset_left = 1488.0
offset_top = 166.0
offset_right = 1649.51
offset_bottom = 142.12

[node name="data" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.793
anchor_top = 0.167
anchor_right = 0.952
anchor_bottom = 0.326
offset_left = 28.7139
offset_top = 19.64
offset_right = -7.7041
offset_bottom = -0.0800171

[node name="hour" type="Label" parent="data"]
layout_mode = 2
text = "Time use"

[node name="time" type="Label" parent="data"]
layout_mode = 2
text = "Arrive in"

[node name="heat" type="Label" parent="data"]
layout_mode = 2
text = "Heat using"

[node name="ship" type="Polygon2D" parent="."]
position = Vector2(345, 356)
color = Color(0, 0.776471, 0.8, 1)
polygon = PackedVector2Array(-1, -37, -43, 57, 53, 59)

[node name="confirm" type="Panel" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.402
anchor_top = 0.414
anchor_right = 0.584
anchor_bottom = 0.6
offset_left = 28.396
offset_top = 25.88
offset_right = -17.7681
offset_bottom = -25.0
grow_horizontal = 2
grow_vertical = 2

[node name="sure" type="Label" parent="confirm"]
layout_mode = 0
offset_left = 70.0
offset_top = 39.0
offset_right = 244.0
offset_bottom = 65.0
text = "Are you sure to travel?"

[node name="ok" type="Button" parent="confirm"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.191
anchor_top = 0.789
anchor_right = 0.469
anchor_bottom = 1.0
offset_left = 17.262
offset_top = -40.415
offset_right = 4.858
offset_bottom = -59.0
text = "OK"

[node name="cancel" type="Button" parent="confirm"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.809
anchor_right = 0.5
anchor_bottom = 0.809
offset_left = 25.0
offset_top = -45.115
offset_right = 15.676
offset_bottom = -51.715
text = "Cancel"

[node name="cant" type="Label" parent="."]
visible = false
anchors_preset = -1
anchor_left = 0.768
anchor_top = 0.292
anchor_right = 0.945
anchor_bottom = 0.369
offset_left = 0.264038
offset_top = 14.64
offset_right = -12.3901
offset_bottom = -23.52
theme_override_colors/font_color = Color(1, 0.501961, 0.435294, 1)
theme_override_colors/font_outline_color = Color(0.658824, 0.658824, 0.658824, 1)
theme_override_constants/outline_size = 4
theme_override_font_sizes/font_size = 30
text = "!! Traveling not Allow !!"
horizontal_alignment = 1

[connection signal="mouse_entered" from="map4/hit" to="." method="_on_hit_mouse_entered" binds= ["map4"]]
[connection signal="mouse_exited" from="map4/hit" to="." method="_on_hit_mouse_exited"]
[connection signal="mouse_entered" from="map3/hit" to="." method="_on_hit_mouse_entered" binds= ["map3"]]
[connection signal="mouse_exited" from="map3/hit" to="." method="_on_hit_mouse_exited"]
[connection signal="mouse_entered" from="map2/hit" to="." method="_on_hit_mouse_entered" binds= ["map2"]]
[connection signal="mouse_exited" from="map2/hit" to="." method="_on_hit_mouse_exited"]
[connection signal="mouse_entered" from="map1/hit" to="." method="_on_hit_mouse_entered" binds= ["map1"]]
[connection signal="mouse_exited" from="map1/hit" to="." method="_on_hit_mouse_exited"]
[connection signal="pressed" from="confirm/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="confirm/cancel" to="." method="_on_cancel_pressed"]
